<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            style="@style/StandardTextHeader"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="25sp" />

        <TextView
            style="@style/StandardTextBody"
            android:text="@string/intro_body_one" />

        <TextView
            style="@style/StandardTextBody"
            android:text="@string/intro_body_two" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/start" />

    </LinearLayout>
</ScrollView>
