<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            style="@style/StandardTextBody"
            android:layout_marginTop="0dp"
            android:text="@string/status_explanation" />

        <com.google.android.material.card.MaterialCardView style="@style/StandardCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/editor_availability_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/status"
                    android:textSize="18sp"
                    app:switchPadding="20dp" />

                <Spinner
                    android:id="@+id/editor_location_spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:entries="@array/location_list"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/student_information_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editor_student_registration_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/registration_number"
                            android:inputType="number"
                            android:lines="1"
                            android:maxLength="7" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editor_student_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/full_name"
                            android:inputType="textPersonName|textCapWords"
                            android:lines="1"
                            android:maxLength="40" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editor_student_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:inputType="phone"
                            android:lines="1"
                            android:maxLength="13" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/status_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            style="@style/StandardTextBody"
            android:text="@string/repair_explanation" />

        <com.google.android.material.card.MaterialCardView style="@style/StandardCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/editor_tyres_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/tyres"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/editor_chain_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/chain"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/editor_cable_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/cable"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/editor_brake_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/brake"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/editor_lubrication_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/lubrication"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/editor_miscellaneous_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/miscellaneous"
                    android:textSize="18sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            style="@style/StandardTextBody"
            android:text="@string/decommissioned_explanation" />

        <com.google.android.material.card.MaterialCardView style="@style/StandardCardView">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/editor_decomission_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/decommission"
                android:textSize="18sp" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/StandardTextHeader"
                android:text="@string/created_on"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/cycle_creation_date"
                style="@style/StandardTextHeader"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/decommissioned_on_header"
                style="@style/StandardTextHeader"
                android:text="@string/decommissioned_on"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/cycle_decommission_date"
                style="@style/StandardTextHeader"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
